--- a/LEARNING 3.ipynb
+++ b/LEARNING 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "e5beef87",
    "metadata": {},
    "outputs": [
@@ -12,9 +12,9 @@
      "text": [
       "         data home_team      away_team scores_id\n",
       "0  1872-11-30  Scotland        England         0\n",
-      "1  1914-02-28  Scotland          Wales         0\n",
-      "2  1946-11-27  Scotland  North ireland         0\n",
-      "3  1963-05-08  Scotland          Spain         0\n"
+      "1  1914-02-28  Scotland          Wales         3\n",
+      "2  1946-11-27  Scotland  North ireland         1\n",
+      "3  1963-05-08  Scotland          Spain         2\n"
      ]
     }
    ],
@@ -31,7 +31,7 @@
     "    \"data\": ['1872-11-30' , '1914-02-28' , '1946-11-27' , '1963-05-08'],\n",
     "    \"home_team\": [\"Scotland\",\"Scotland\",\"Scotland\",\"Scotland\"],\n",
     "    \"away_team\" : ['England' , 'Wales' , 'North ireland' , 'Spain'],\n",
-    "    \"scores_id\" : [\"0\", \"0\", \"0\", \"0\"],\n",
+    "    \"scores_id\" : [\"0\", \"3\", \"1\", \"2\"],\n",
     "\n",
     "}\n",
     "\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "00fd8305",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "eed17596",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "7905f51c",
    "metadata": {},
    "outputs": [
@@ -164,6 +164,143 @@
     "print(merge)\n",
     "\n",
     "# 3 was repeated for value_y because there was only one in y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "d322df5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         data home_team      away_team scores_id id home_score away_score\n",
+      "0  1872-11-30  Scotland        England         0  0          0          0\n",
+      "1  1914-02-28  Scotland          Wales         3  3          4          0\n",
+      "2  1946-11-27  Scotland  North ireland         1  1          2          1\n",
+      "3  1963-05-08  Scotland          Spain         2  2          3          0\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using games and scores dataframes \n",
+    "\n",
+    "merge2 = pd.merge(left=games,\n",
+    "                 right=scores,\n",
+    "                 left_on='scores_id',\n",
+    "                 right_on='id',\n",
+    "                 how= 'inner'\n",
+    "                 )\n",
+    "\n",
+    "\n",
+    "print(merge2)\n",
+    "\n",
+    "\n",
+    "# Gives you the full results \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "dbf3d9e8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  category  value_x  value_y\n",
+      "0        A        1      NaN\n",
+      "1        B        2      3.0\n",
+      "2        B        5      3.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#LEFT MERGES \n",
+    "# Using X and Y dataframes \n",
+    "\n",
+    "merge3 = pd.merge(left=x,\n",
+    "                 right=y,\n",
+    "                 left_on='category',\n",
+    "                 right_on='category',\n",
+    "                 how= 'left'   #for left merge \n",
+    "                 )\n",
+    "\n",
+    "\n",
+    "print(merge3)\n",
+    "\n",
+    "# 3.0 because of the NaN which is not an integer value so pandas converts the whole column to a float  \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2aec3104",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  category  value_x  value_y\n",
+      "0        B      2.0        3\n",
+      "1        B      5.0        3\n",
+      "2        C      NaN        4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#RIGHT MERGES \n",
+    "# Same as left but uses the categories from the right for the merge \n",
+    "\n",
+    "merge4 = pd.merge(left=x,\n",
+    "                 right=y,\n",
+    "                 left_on='category',\n",
+    "                 right_on='category',\n",
+    "                 how= 'right'   #for right merge \n",
+    "                 )\n",
+    "\n",
+    "\n",
+    "print(merge4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dcf55a8a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  category  value_x  value_y\n",
+      "0        A      1.0      NaN\n",
+      "1        B      2.0      3.0\n",
+      "2        B      5.0      3.0\n",
+      "3        C      NaN      4.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "#OUTER MERGE \n",
+    "# does for both sides ...uses the category of both sides \n",
+    "#Example using X and Y \n",
+    "\n",
+    "merge5 = pd.merge(left=x,\n",
+    "                 right=y,\n",
+    "                 left_on='category',\n",
+    "                 right_on='category',\n",
+    "                 how= 'outer'   #for outer merge \n",
+    "                 )\n",
+    "\n",
+    "\n",
+    "print(merge5)\n",
+    "\n",
+    "# calls out all the categories \n"
    ]
   }
  ],
