--- a/LEARNING 3.ipynb
+++ b/LEARNING 3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 120,
    "id": "e5beef87",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         data home_team      away_team scores_id\n",
+      "         date home_team      away_team scores_id\n",
       "0  1872-11-30  Scotland        England         0\n",
       "1  1914-02-28  Scotland          Wales         3\n",
       "2  1946-11-27  Scotland  North ireland         1\n",
@@ -28,7 +28,7 @@
     "import pandas as pd \n",
     "\n",
     "games = {\n",
-    "    \"data\": ['1872-11-30' , '1914-02-28' , '1946-11-27' , '1963-05-08'],\n",
+    "    \"date\": ['1872-11-30' , '1914-02-28' , '1946-11-27' , '1963-05-08'],\n",
     "    \"home_team\": [\"Scotland\",\"Scotland\",\"Scotland\",\"Scotland\"],\n",
     "    \"away_team\" : ['England' , 'Wales' , 'North ireland' , 'Spain'],\n",
     "    \"scores_id\" : [\"0\", \"3\", \"1\", \"2\"],\n",
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 121,
    "id": "00fd8305",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 122,
    "id": "eed17596",
    "metadata": {},
    "outputs": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 123,
    "id": "7905f51c",
    "metadata": {},
    "outputs": [
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 124,
    "id": "d322df5e",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         data home_team      away_team scores_id id home_score away_score\n",
+      "         date home_team      away_team scores_id id home_score away_score\n",
       "0  1872-11-30  Scotland        England         0  0          0          0\n",
       "1  1914-02-28  Scotland          Wales         3  3          4          0\n",
       "2  1946-11-27  Scotland  North ireland         1  1          2          1\n",
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 125,
    "id": "dbf3d9e8",
    "metadata": {},
    "outputs": [
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 126,
    "id": "2aec3104",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 127,
    "id": "dcf55a8a",
    "metadata": {},
    "outputs": [
@@ -301,6 +301,106 @@
     "print(merge5)\n",
     "\n",
     "# calls out all the categories \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 128,
+   "id": "d11ebff0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         date    home_team         away_team       winner\n",
+      "0  1967-08-22        India            Taiwan       taiwan\n",
+      "1  1971-11-14  South Korea  Vietnam Republic  South Korea\n",
+      "2  1972-05-07  South Korea              Iraq         Iraq\n",
+      "3  1972-05-17     Thailand              Iraq  South Korea\n"
+     ]
+    }
+   ],
+   "source": [
+    "#MULTIPLE COLUMNS \n",
+    "# Basically choosing each columns from dataframe A i want to merge to dataframe B columns and also C columns \n",
+    "# Still using games and scores dataframes\n",
+    "\n",
+    "#Creating new dataframe shootouts\n",
+    "\n",
+    "\n",
+    "shootouts = {\n",
+    "    \"date\": ['1967-08-22' , '1971-11-14' , '1972-05-07' , '1972-05-17'],\n",
+    "    \"home_team\": [\"India\",\"South Korea\",\"South Korea\",\"Thailand\"],\n",
+    "    \"away_team\" : ['Taiwan' , 'Vietnam Republic' , 'Iraq' , 'Iraq'],\n",
+    "    \"winner\" : [\"taiwan\", \"South Korea\", \"Iraq\", \"South Korea\"],\n",
+    "\n",
+    "}\n",
+    "\n",
+    "shootouts = pd.DataFrame(shootouts)\n",
+    "\n",
+    "print(shootouts)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaca15c5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         date home_team_x    away_team_x scores_id  home_team_y  \\\n",
+      "0  1872-11-30    Scotland        England         0          NaN   \n",
+      "1  1914-02-28    Scotland          Wales         3          NaN   \n",
+      "2  1946-11-27    Scotland  North ireland         1          NaN   \n",
+      "3  1963-05-08    Scotland          Spain         2          NaN   \n",
+      "4  1967-08-22         NaN            NaN       NaN        India   \n",
+      "5  1971-11-14         NaN            NaN       NaN  South Korea   \n",
+      "6  1972-05-07         NaN            NaN       NaN  South Korea   \n",
+      "7  1972-05-17         NaN            NaN       NaN     Thailand   \n",
+      "\n",
+      "        away_team_y       winner  \n",
+      "0               NaN          NaN  \n",
+      "1               NaN          NaN  \n",
+      "2               NaN          NaN  \n",
+      "3               NaN          NaN  \n",
+      "4            Taiwan       taiwan  \n",
+      "5  Vietnam Republic  South Korea  \n",
+      "6              Iraq         Iraq  \n",
+      "7              Iraq  South Korea  \n"
+     ]
+    }
+   ],
+   "source": [
+    "#Merging them \n",
+    "\n",
+    "merge6 = pd.merge(\n",
+    "    left=games,\n",
+    "    right=shootouts,\n",
+    "    left_on=['date', 'home_team'],     # home team from games\n",
+    "    right_on=['date', 'away_team'],    # away team from shootouts\n",
+    "    how='outer'\n",
+    ")\n",
+    "\n",
+    "#merging (home team vs away team) \n",
+    "\n",
+    "\n",
+    "print(merge6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "418b8aa2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#CHOOSING THE RIGHT MERGE METHOD \n",
+    "\n",
+    "# to inspect a dataframe thoroughly it is better to use LEFT , RIGHT & OUTER MERGE\n"
    ]
   }
  ],
